@@ -1,0 +1,5 @@
+Test for bug 8051: Empty forms are submitted incorrectly.
+
+Success
+
+
