@@ -669,7 +669,7 @@ void KURL::setQuery(const DeprecatedString &query)
 {
     if (m_isValid) {
         DeprecatedString q;
-        if (!query.isEmpty() && query[0] != '?') {
+        if (!query.isNull() && (query.isEmpty() || query[0] != '?')) {
             q = "?" + query;
         } else {
             q = query;
